# Trajectory-Hotspots-Visualization

./: .gitignore  .gitmodules  CMakeLists.txt  Install-Submodules.bat  README.md  SECURITY.md
.github/workflows/: Build.yml  Testing.yml
Trajectory-Hotspots/: Visualization.cpp  window.h
Trajectory-Hotspots-Benchmark/: Benchmark.cpp  CMakeLists.txt  pch.h
Trajectory-Hotspots-Parser/: CMakeLists.txt  file_parser.h  pch.h
Trajectory-Hotspots-Visualization/: CMakeLists.txt  Visualization.cpp  pch.h  window.cpp  window.h
Trajectory-Hotspots-Visualization/Interfaces/: drawable.h
Trajectory-Hotspots-Visualization/Trajectory-Hotspots-Wrappers/: aabb.h  drawable.h  drawable_aabb.h  drawable_segment_search_tree.cpp  drawable_segment_search_tree.h  drawable_trajectory.cpp  drawable_trajectory.h  drawable_trapezoidal_map.cpp  drawable_trapezoidal_map.h  trajectory.cpp  trajectory.h  trapezoidal_map.cpp  trapezoidal_map.h
Trajectory-Hotspots-Visualization/Window/: file_pick_table_widget.h  main_window.cpp  main_window.h  window.cpp  window.h
Trajectory-Hotspots-Visualization/include/Trajectory-Hotspots-Wrappers/: drawable_aabb.h  drawable_segment_search_tree.h  drawable_trajectory.h  drawable_trapezoidal_map.h
Trajectory-Hotspots-Visualization/include/Window/: file_pick_table_widget.h  main_window.h  window.h
Trajectory-Hotspots-Visualization/src/Trajectory-Hotspots-Wrappers/: drawable_segment_search_tree.cpp  drawable_trajectory.cpp  drawable_trapezoidal_map.cpp
Trajectory-Hotspots-Visualization/src/Window/: file_pick_table_widget.cpp  main_window.cpp  window.cpp
examples/: config.txt  trajectory1.txt  trajectory2.txt
examples/1/: config.txt
examples/2/: config.txt  trajectory1.txt  trajectory2.txt
